# finchboard-testing-suite

./: Cargo.toml  Dockerfile
src/house-light/: main.rs
src/peckboard/: lib.rs  main.rs
src/playback/: main.rs
src/stepper-motor/: lib.rs  main.rs
src/tripwire/: main.rs
src/vcnl4040-tof/: main.rs
src/vl53l4cd-tof/: main.rs
